Create app with CRA and customize it

--- a/.gitignore
+++ b/.gitignore
@@ -199,3 +199,22 @@ dist
 
 # TernJS port file
 .tern-port
+
+## CRA
+
+# dependencies
+/node_modules
+/.pnp
+.pnp.js
+
+# testing
+/coverage
+
+# production
+/build
+
+# misc
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
