--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
   "dependencies": {
     "@types/react": "^16.9.48",
     "@types/react-dom": "^16.9.8",
+    "axios": "^0.20.0",
+    "axios-mock-adapter": "^1.18.2",
+    "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.3",
