--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "react-hw-01-components",
   "version": "0.1.0",
   "private": true,
+  "homepage": "http://levaleks.github.io/react-hw-01-components",
   "dependencies": {
     "@types/react": "^16.9.48",
     "@types/react-dom": "^16.9.8",
@@ -18,11 +19,14 @@
     "build": "react-scripts build",
     "eject": "react-scripts eject",
     "format": "prettier --write \"src/**/*\"",
-    "lint": "eslint --fix \"src/**/*.{js,jsx,ts,tsx}\""
+    "lint": "eslint --fix \"src/**/*.{js,jsx,ts,tsx}\"",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "devDependencies": {
     "eslint": "^6.6.0",
     "eslint-config-airbnb-typescript-prettier": "^3.1.0",
+    "gh-pages": "^3.1.0",
     "husky": "^4.2.5",
     "prettier": "^2.1.1",
     "typescript": "^4.0.2"
